feat: attention management, stop-check script, init detection, test suite
- F-1: state.yaml template embeds behavior rules in header comments (head -25)
- F-2: SKILL.md adds attention management section with progress check guidance
- F-3: New step-stop-check.sh replaces echo-only Stop hook with real checks
- F-4: detect_project() covers 16 manifests + 6 tool dirs (scripts/agents/etc)
- F-6: Phase 4 adds 2-Action Rule for progress update frequency
- F-7: Execution rules add Pre-decision Read requirement
- F-8: Fix outdated claims in STEP-vs-planning-with-files.md comparison
- Add 5 test files with 30 BDD scenarios (all passing)
- Add .step/ self-optimization project state
- Add 4 comparison documents

--- a/templates/state.yaml
+++ b/templates/state.yaml
@@ -1,3 +1,8 @@
+# ⚡ STEP 注意力规则 — 看到此内容时检查:
+# ⚡ 1. progress_log 是否需要追加本次进度?
+# ⚡ 2. key_decisions 是否有新的决策需要记录?
+# ⚡ 3. next_action 是否仍然准确?
+# ────────────────────────────────────────
 # STEP Protocol — 项目状态（由协议自动维护）
 project: "TODO"
 current_phase: "phase-0-discovery"
@@ -12,5 +17,20 @@ tasks:
   current: null
   upcoming: []
 
+# 关键决策摘要（每条记录决策内容、原因、阶段）
+key_decisions: []
+# 示例:
+# - decision: "选择 HttpOnly Cookie 方案替代 JWT"
+#   reason: "JWT 存在 CSRF 风险，Cookie 方案更安全且实现简单"
+#   phase: "phase-2-tech-design"
+#   date: "2026-02-15"
+
 known_issues: []
 constraints_quick_ref: []
+
+# 进度日志（每次对话结束时追加）
+progress_log: []
+# 示例:
+# - date: "2026-02-15"
+#   summary: "完成 T-001 auth 模块所有场景，gate standard 通过"
+#   next_action: "开始 T-002，先写 src/api/tasks.test.ts"
