refactor(step): fix Lite Mode design per user feedback
6 design corrections:
1. Baseline tracking: Step 6 now requires marking baseline.md [x] on done
   - Added SKILL.md hard rule #7: Baseline 完成跟踪
2. Removed 'lite' gate level: Lite Mode uses 'standard' gate (same as Full)
3. Removed .step/lite/ directory: all tasks in .step/tasks/ (L-xxx.yaml)
4. Batch task support: L1 can batch-spec multiple lite tasks, confirm once
5. Unified archival: both Full and Lite tasks archive to .step/archive/
6. L3 = full Code Review (same as Phase 5), not auto-review
   - Lite simplifies planning (L1), not quality assurance (L3)

Tests: 48/48 passing (18 updated scenarios in test-t006.sh)

--- a/templates/lite-task.yaml
+++ b/templates/lite-task.yaml
@@ -1,4 +1,4 @@
-# STEP Lite Task 模板 — Lite Mode L1 阶段生成
+# STEP Lite Task 模板 — Lite Mode L1 阶段生成，存放于 .step/tasks/
 id: L-000
 title: "任务标题"
 mode: lite
@@ -35,4 +35,4 @@ scenarios:
 
 # 完成条件
 done_when:
-  - "gate.sh lite L-000"
+  - "gate.sh standard L-000"
