--- a/templates/lite-task.yaml
+++ b/templates/lite-task.yaml
@@ -1,5 +1,6 @@
 # STEP Lite Task 模板 — Lite Mode L1 阶段生成，存放于 .step/tasks/
-id: L-000
+# 文件名: .step/tasks/{slug}.yaml（如 fix-empty-password.yaml）
+id: task-slug       # 语义化 slug，与文件名一致（不含 .yaml）
 title: "任务标题"
 mode: lite
 status: planned  # planned | in_progress | done
@@ -15,24 +16,24 @@ affected_files:
 
 # BDD 场景（Lite Mode 简化版，仍需 100% 覆盖）
 scenarios:
-  - id: S-L000-01
+  - id: S-task-slug-01
     given: "正常输入"
     when: "执行操作"
     then: "预期输出"
     test_file: "test/xxx/xxx.test.ts"
-    test_name: "[S-L000-01] 描述"
+    test_name: "[S-task-slug-01] 描述"
     test_type: unit  # unit | integration | e2e
     status: not_run  # not_run | fail | pass
 
-  - id: S-L000-02
+  - id: S-task-slug-02
     given: "边界输入"
     when: "执行操作"
     then: "预期输出"
     test_file: "test/xxx/xxx.test.ts"
-    test_name: "[S-L000-02] 描述"
+    test_name: "[S-task-slug-02] 描述"
     test_type: unit
     status: not_run
 
 # 完成条件
 done_when:
-  - "gate.sh standard L-000"
+  - "gate.sh standard task-slug"
