--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -1,21 +1,27 @@
 # STEP Protocol — 项目配置
 # 根据项目实际情况修改
 
-model_routing:
-  # Phase 0-3: 规划阶段
-  discovery: { model: "claude-opus" }
-  prd: { model: "claude-opus" }
-  tech_design: { model: "claude-opus" }
-  planning: { model: "claude-opus" }
+# 阶段 → Agent 路由（编排器参考此表派发子 agent）
+# 删除某行 = 编排器自己处理该阶段
+routing:
+  discovery:    { agent: step-pm }
+  prd:          { agent: step-pm }
+  tech_design:  { agent: step-architect }
+  planning:     { agent: step-architect }
+  scenario:     { agent: step-qa }
+  test_writing: { agent: step-qa, note: "建议与 execution agent 不同，形成对抗性" }
+  execution:    { agent: step-developer }
+  review:       { agent: step-reviewer }
 
-  # Phase 4: 执行阶段
-  test_writing: { model: "codex", note: "可配置，建议与实现模型不同以形成对抗性" }
-  frontend: { model: "gemini", patterns: ["src/components/**", "**/*.tsx", "**/*.css"] }
-  backend: { model: "codex", patterns: ["src/api/**", "src/db/**", "src/lib/**"] }
-  complex_logic: { model: "claude-opus", note: "手动指定" }
-
-  # Phase 5: 审查阶段
-  review: { model: "claude-opus | codex", note: "可选，参考 code-review-expert skill" }
+# Phase 4 文件模式路由（前端文件 → designer，其余 → developer）
+# 编排器根据文件路径匹配 patterns，决定用哪个 agent
+file_routing:
+  frontend:
+    agent: step-designer
+    patterns: ["src/components/**", "**/*.tsx", "**/*.css", "**/*.vue"]
+  backend:
+    agent: step-developer
+    patterns: ["src/api/**", "src/db/**", "src/lib/**"]
 
 # Gate 命令（根据项目包管理器和工具链修改）
 gate:
