refine(step): complete config injection, L1→step-pm routing, reviewer removal+large-diff strategy
- session-start.sh: replace grep -A 50 with full config.yaml injection (eliminate truncation risk)
- Add routing.lite_spec → step-pm for Lite L1 Quick Spec dispatch
- reviewer.md: add Removal Candidates + Large Diff Strategy sections (cover code-review-expert gaps)
- Sync WORKFLOW.md, SKILL.md, templates/config.yaml, .step/config.yaml

--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -6,6 +6,7 @@
 routing:
   discovery:    { agent: step-pm }
   prd:          { agent: step-pm }
+  lite_spec:    { agent: step-pm, note: "Lite L1 Quick Spec，轻量需求确认" }
   tech_design:  { agent: step-architect }
   planning:     { agent: step-architect }
   scenario:     { agent: step-qa }
