feat(step): add step-deployer agent for optional post-review deploy strategy
- New agents/deployer.md: platform selection, CI/CD pipeline design, env checklist, risk analysis
- Routing: deploy → step-deployer (optional, triggered after Review pass)
- SKILL.md: 7 roles, routing/role tables updated, balance principle extended
- WORKFLOW.md: Deploy optional stage section, role table updated
- install.sh: tree structure updated with deployer.md

--- a/.step/state.yaml
+++ b/.step/state.yaml
@@ -5,10 +5,10 @@
 # ⚡ 规则: 每 2 次工具调用后自省是否需要更新状态
 project: "STEP-Plugin"
 project_type: "existing"
-current_phase: "phase-4-execution"
-last_updated: "2026-02-15T14:00:00Z"
+current_phase: "idle"
+last_updated: "2026-02-15T14:30:00Z"
 last_agent: "orchestrator"
-last_session_summary: "Lite L1 确认：借鉴 Build Any App prompt 增强 6 agent。Deploy agent 待讨论。"
+last_session_summary: "Lite task agent-enhancement 完成：借鉴 Build Any App prompt 增强 6 agent（挑战假设+复杂度评估+Polish+v2建议+gate选项+commit摘要+Handoff）。Deploy agent 待讨论。"
 
 established_patterns:
   hook_mechanism: "SKILL.md frontmatter → PreToolUse/PostToolUse/Stop"
@@ -18,10 +18,8 @@ established_patterns:
   config_architecture: "5-layer: agent .md → config.yaml routing → file_routing → gate → oh-my-opencode preset"
 
 tasks:
-  completed: []
-  current:
-    id: agent-enhancement
-    phase: execution
+  completed: [agent-enhancement]
+  current: null
   upcoming: []
 
 key_decisions:
