feat(step): add worktree workflow automation
Introduce optional worktree flow with merge/archival helpers and tests to support parallel changes while keeping STEP docs and init templates in sync.

--- a/.step/config.yaml
+++ b/.step/config.yaml
@@ -27,5 +27,10 @@ file_routing:
 gate:
   lint: "echo 'no lint configured'"
   typecheck: "echo 'no typecheck configured'"
-  test: "bash tests/test-attention-management.sh && bash tests/test-stop-hook.sh && bash tests/test-init-detection.sh && bash tests/test-execution-rules.sh && bash tests/test-docs-correction.sh && bash tests/test-lite-mode-and-naming.sh && bash tests/test-archive-feature.sh"
+  test: "bash tests/test-attention-management.sh && bash tests/test-stop-hook.sh && bash tests/test-init-detection.sh && bash tests/test-execution-rules.sh && bash tests/test-docs-correction.sh && bash tests/test-lite-mode-and-naming.sh && bash tests/test-archive-feature.sh && bash tests/test-change-structure-scripts.sh && bash tests/test-session-start-hook.sh && bash tests/test-worktree-mode.sh"
   build: "echo 'no build configured'"
+
+# Worktree 并行开发（默认关闭）
+worktree:
+  enabled: false
+  branch_prefix: "change/"
