feat(core): implement custom YAML parser and status dashboard
- replace Python dependency with a lightweight, built-in YAML parser in step-core.js
- add /step/status command for real-time project health and progress tracking
- implement dangerous executable blacklist in gate logic for security
- enforce mandatory 'gate lite' verification after LLM-based conflict resolution
- rename main entry point to /step/init for better command hierarchy
- implement real-time progress logging for gate results

--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -31,6 +31,15 @@ gate:
   typecheck: "pnpm tsc --noEmit"
   test: "pnpm vitest run"
   build: "pnpm build"
+  dangerous_executables:
+    - "rm"
+    - "dd"
+    - "mkfs"
+    - "shutdown"
+    - "reboot"
+    - "poweroff"
+    - "halt"
+    - "sudo"
 
 # Worktree 并行开发（可选）
 # enabled=true 时，STEP 在变更开始阶段优先使用独立 worktree 执行
